--- a/Documental/nbproject/project.properties
+++ b/Documental/nbproject/project.properties
@@ -30,11 +30,19 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.blitzer-1.0.7.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\blitzer-1.0.7.jar
+file.reference.bluesky-1.0.10.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\bluesky-1.0.10.jar
 file.reference.commons-codec-1.10.jar=clases\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\commons-codec-1.10.jar
 file.reference.jsp-api-2.0.jar=clases\\jsp-api-2.0.jar
+file.reference.jsp-api-2.0.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\jsp-api-2.0.jar
 file.reference.jstl-1.2.jar=clases\\jstl-1.2.jar
+file.reference.jstl-1.2.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\jstl-1.2.jar
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=clases\\mysql-connector-java-3.0.17-ga-bin.jar
+file.reference.mysql-connector-java-3.0.17-ga-bin.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\mysql-connector-java-3.0.17-ga-bin.jar
 file.reference.start-1.0.1.jar=clases\\start-1.0.1.jar
+file.reference.start-1.0.1.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\start-1.0.1.jar
+file.reference.sunny-1.0.2.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\sunny-1.0.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,7 +61,15 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
     ${file.reference.jsp-api-2.0.jar}:\
     ${file.reference.jstl-1.2.jar}:\
-    ${file.reference.start-1.0.1.jar}
+    ${file.reference.start-1.0.1.jar}:\
+    ${file.reference.blitzer-1.0.7.jar}:\
+    ${file.reference.bluesky-1.0.10.jar}:\
+    ${file.reference.commons-codec-1.10.jar-1}:\
+    ${file.reference.jsp-api-2.0.jar-1}:\
+    ${file.reference.jstl-1.2.jar-1}:\
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar-1}:\
+    ${file.reference.start-1.0.1.jar-1}:\
+    ${file.reference.sunny-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
