--- a/Documental/nbproject/project.properties
+++ b/Documental/nbproject/project.properties
@@ -32,17 +32,11 @@ endorsed.classpath=\
 excludes=
 file.reference.blitzer-1.0.7.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\blitzer-1.0.7.jar
 file.reference.bluesky-1.0.10.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\bluesky-1.0.10.jar
-file.reference.commons-codec-1.10.jar=clases\\commons-codec-1.10.jar
-file.reference.commons-codec-1.10.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\commons-codec-1.10.jar
-file.reference.jsp-api-2.0.jar=clases\\jsp-api-2.0.jar
+file.reference.commons-codec-1.10.jar=build\\web\\WEB-INF\\lib\\commons-codec-1.10.jar
 file.reference.jsp-api-2.0.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\jsp-api-2.0.jar
-file.reference.jstl-1.2.jar=clases\\jstl-1.2.jar
-file.reference.jstl-1.2.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\jstl-1.2.jar
-file.reference.mysql-connector-java-3.0.17-ga-bin.jar=clases\\mysql-connector-java-3.0.17-ga-bin.jar
-file.reference.mysql-connector-java-3.0.17-ga-bin.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\mysql-connector-java-3.0.17-ga-bin.jar
-file.reference.start-1.0.1.jar=clases\\start-1.0.1.jar
-file.reference.start-1.0.1.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\start-1.0.1.jar
-file.reference.sunny-1.0.2.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\sunny-1.0.2.jar
+file.reference.mysql-connector-java-3.0.17-ga-bin.jar=build/web/WEB-INF/lib/mysql-connector-java-3.0.17-ga-bin.jar
+file.reference.start-1.0.1.jar=build/web/WEB-INF/lib/start-1.0.1.jar
+file.reference.sunny-1.0.2.jar=build/web/WEB-INF/lib/sunny-1.0.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -57,19 +51,14 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
-    ${file.reference.jsp-api-2.0.jar}:\
-    ${file.reference.jstl-1.2.jar}:\
-    ${file.reference.start-1.0.1.jar}:\
     ${file.reference.blitzer-1.0.7.jar}:\
     ${file.reference.bluesky-1.0.10.jar}:\
-    ${file.reference.commons-codec-1.10.jar-1}:\
     ${file.reference.jsp-api-2.0.jar-1}:\
-    ${file.reference.jstl-1.2.jar-1}:\
-    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar-1}:\
-    ${file.reference.start-1.0.1.jar-1}:\
-    ${file.reference.sunny-1.0.2.jar}
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
+    ${file.reference.start-1.0.1.jar}:\
+    ${file.reference.sunny-1.0.2.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -97,7 +86,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
