--- a/Documental/nbproject/project.properties
+++ b/Documental/nbproject/project.properties
@@ -32,11 +32,11 @@ endorsed.classpath=\
 excludes=
 file.reference.blitzer-1.0.7.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\blitzer-1.0.7.jar
 file.reference.bluesky-1.0.10.jar=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\bluesky-1.0.10.jar
-file.reference.commons-codec-1.10.jar=build\\web\\WEB-INF\\lib\\commons-codec-1.10.jar
+file.reference.commons-codec-1.10.jar=web/WEB-INF/lib/commons-codec-1.10.jar
 file.reference.jsp-api-2.0.jar-1=C:\\Users\\DiegoM\\Documents\\NetBeansProjects\\Documental\\clases\\jsp-api-2.0.jar
-file.reference.mysql-connector-java-3.0.17-ga-bin.jar=build/web/WEB-INF/lib/mysql-connector-java-3.0.17-ga-bin.jar
-file.reference.start-1.0.1.jar=build/web/WEB-INF/lib/start-1.0.1.jar
-file.reference.sunny-1.0.2.jar=build/web/WEB-INF/lib/sunny-1.0.2.jar
+file.reference.mysql-connector-java-3.0.17-ga-bin.jar=web/WEB-INF/lib/mysql-connector-java-3.0.17-ga-bin.jar
+file.reference.start-1.0.1.jar=web/WEB-INF/lib/start-1.0.1.jar
+file.reference.sunny-1.0.2.jar=web/WEB-INF/lib/sunny-1.0.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -57,8 +57,7 @@ javac.classpath=\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
     ${file.reference.start-1.0.1.jar}:\
-    ${file.reference.sunny-1.0.2.jar}:\
-    ${file.reference.commons-codec-1.10.jar}
+    ${file.reference.sunny-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
